Pacific Atlantic Water Flow: Refactored solution led to improved performance